@@ -1,5 +1,5 @@
 /* Window.java --
-   Copyright (C) 1999, 2000, 2002, 2003, 2004  Free Software Foundation
+   Copyright (C) 1999, 2000, 2002, 2003, 2004, 2005  Free Software Foundation
 
 This file is part of GNU Classpath.
 
@@ -277,7 +277,9 @@ public class Window extends Container implements Accessible
   /**
    * Shows on-screen this window and any of its owned windows for whom
    * isVisible returns true.
+   * @specnote: Deprecated starting in 1.5.
    */
+  @Deprecated
   public void show()
   {
     if (parent != null && !parent.isDisplayable())
@@ -327,6 +329,10 @@ public class Window extends Container implements Accessible
       }
   }
 
+  /**
+   * @specnote: Deprecated starting in 1.5.
+   */
+  @Deprecated
   public void hide()
   {
     // Hide visible owned windows.
