@@ -38,6 +38,7 @@ exception statement from your version. */
 package java.awt.im;
 
 import java.util.Map;
+import java.awt.font.TextAttribute;
 
 /**
  * This describes the highlight attributes of text composed in an input method.
@@ -92,7 +93,7 @@ public class InputMethodHighlight
   private final int variation;
 
   /** The unmodifiable map of rendering styles. */
-  private final Map style;
+  private final Map<TextAttribute, ?> style;
 
   /**
    * Create an input method highlight style, with variation 0 and null style
@@ -131,7 +132,7 @@ public class InputMethodHighlight
    * @since 1.3
    */
   public InputMethodHighlight(boolean selected, int state, int variation,
-                              Map style)
+                              Map<TextAttribute, ?> style)
   {
     if (state != RAW_TEXT && state != CONVERTED_TEXT)
       throw new IllegalArgumentException();
@@ -178,7 +179,7 @@ public class InputMethodHighlight
    * @return the style map
    * @since 1.3
    */
-  public Map getStyle()
+  public Map<TextAttribute, ?> getStyle()
   {
     return style;
   }
